# riptide_ros_bridge

./: .gitignore  CMakeLists.txt  package.xml
config/: bridge.moos  ppp-bridge.moos  wifi-bridge.moos
launch/: interface-over-wifi.launch  interface.launch
msg/: Gps.msg  IvpHelmState.msg  Nav.msg  Pressure.msg
src/: interface_node.cpp
src/riptide_ros_interface/: moos_node.cpp  moos_node.h  pool.h  process.cpp  process.h  ros_node.cpp  ros_node.h  utils.hpp
src/temp/: interface.cpp  interface.h
srv/: Depth.srv  SetHelmCondition.srv  SetWayPoint.srv
