<?xml version="1.0"?>
<package format="2">
  <name>riptide_ros_interface</name>
  <version>0.0.1</version>
  <description>Interface between MOOS-IvP and ROS for Riptide uUUV</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>auv_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>auv_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>


  <export>

  </export>
</package>
